--- a/index.html
+++ b/index.html
@@ -96,5 +96,31 @@
             
         </div>
     </div>
+
+    <!-- create shop materials -->
+
+    <div class="box">
+        <div class="box1">
+            <div class="box1-a">
+              <div class="box1-a1">
+                <div class="h">Headsets</div>
+              </div>
+              <div class="box1-a2">
+                <div class="k">Keyboards</div>
+              </div>
+            </div>
+            <div class="box1-b">
+             <div class="box1-b1">
+                <div class="cm">Computer mice</div>
+             </div>
+             <div class="box1-b2">
+                <div class="c">Chairs</div>
+             </div>
+            </div>
+        </div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
+    </div>
 </body>
 </html>
