--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
     <div class="box">
         <div class="box1">
+            <div class="g">Gaming accessories</div>
             <div class="box1-a">
               <div class="box1-a1">
                 <div class="h">Headsets</div>
@@ -117,8 +118,13 @@
                 <div class="c">Chairs</div>
              </div>
             </div>
+            <div class="s">See more</div>
         </div>
-        <div class="box2"></div>
+        <div class="box2">
+            <div class="d">Deals in Pcs</div>
+            <div class="dj"></div>
+            <div class="sh">Shop now</div>
+        </div>
         <div class="box3"></div>
         <div class="box4"></div>
     </div>
