--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@
             <div class="dj"></div>
             <div class="sh">Shop now</div>
         </div>
-        <div class="box3"></div>
+        <div class="box3">
+            <div class="t">Toys under $25</div>
+            <div class="toys"></div>
+            <div class="sh">Shop now</div>
+        </div>
         <div class="box4"></div>
     </div>
 </body>
