--- a/index.html
+++ b/index.html
@@ -130,7 +130,26 @@
             <div class="toys"></div>
             <div class="sh">Shop now</div>
         </div>
-        <div class="box4"></div>
+        <div class="box4">
+            <div class="r">Refresh your space</div>
+            <div class="box4-a">
+                <div class="box4-a1">
+                    <div class="di">Dining</div>
+                </div>
+                <div class="box4-a2">
+                    <div class="h">Home</div>
+                </div>
+            </div>
+            <div class="box4-b">
+                <div class="box4-b1">
+                    <div class="ki">Kitchen</div>
+                </div>
+                <div class="box4-b2">
+                    <div class="hb">Health and Beauty</div>
+                </div>
+            </div>
+            <div class="s">See more</div>
+        </div>
     </div>
 </body>
 </html>
