--- a/index.html
+++ b/index.html
@@ -151,5 +151,19 @@
             <div class="s">See more</div>
         </div>
     </div>
+       
+
+    <div class="cloths">
+        <div class="cloths-box1">
+            <div class="td">Top Deal</div>
+            <div class="cloths-pic"></div>
+            <div class="cloth-text1"><div class="off">Up to 50% off</div> Top Deal</div>
+            <div class="cloth-text2">Mangopop Women Bodysuit</div>
+            <div class="sad">See all deals</div>
+        </div>
+        <div class="cloths-box2"></div>
+        <div class="cloths-box3"></div>
+        <div class="cloths-box4"></div>
+    </div>
 </body>
 </html>
