--- a/index.html
+++ b/index.html
@@ -161,7 +161,28 @@
             <div class="cloth-text2">Mangopop Women Bodysuit</div>
             <div class="sad">See all deals</div>
         </div>
-        <div class="cloths-box2"></div>
+        <div class="cloths-box2">
+            <div class="box2-text">Shop deal in Fashion</div>
+            <div class="cloths-box2-a">
+                <div class="cloths-box2-a1">
+                  <div class="cloths-box2-a1-text">Jeans under $50</div>
+                </div>
+                 <div class="cloths-box2-a2">
+                    <div class="cloths-box2-a2-text">Top unders $25</div>
+                 </div>
+                
+            </div>
+            <div class="cloths-box2-b">
+                <div class="cloths-box2-b1">
+                    <div class="cloths-box2-b1-text">Dresses under $30</div>
+                </div>
+                <div class="cloths-box2-b2">
+                    <div class="cloths-box2-b2-text">Shoes under $50</div>
+                </div>
+                
+            </div>
+            <div class="sad">See all deals</div>
+        </div>
         <div class="cloths-box3"></div>
         <div class="cloths-box4"></div>
     </div>
