--- a/index.html
+++ b/index.html
@@ -183,7 +183,11 @@
             </div>
             <div class="sad">See all deals</div>
         </div>
-        <div class="cloths-box3"></div>
+        <div class="cloths-box3">
+            <div class="cloths-box3-text">Lunar New Year</div>
+            <div class="cloths-box3-pic"></div>
+            <div class="sh">shop now</div>
+        </div>
         <div class="cloths-box4"></div>
     </div>
 </body>
