--- a/index.html
+++ b/index.html
@@ -188,7 +188,11 @@
             <div class="cloths-box3-pic"></div>
             <div class="sh">shop now</div>
         </div>
-        <div class="cloths-box4"></div>
+        <div class="cloths-box4">
+            <div class="cloths-box4-text">New year, now you</div>
+            <div class="cloths-box4-pic"></div>
+            <div class="sh">Shop now</div>
+        </div>
     </div>
 </body>
 </html>
