--- a/index.html
+++ b/index.html
@@ -254,5 +254,198 @@
             </div>
         </div>
     </div>
+
+    <div class="footer-lower">
+        
+          <div class="aws-logo"></div>
+          <div class="footer-text">
+             <div class="footer-lower-text1">
+                <i class="fa-solid fa-globe"></i>
+                <div class="footer-lower-text1-a">English</div>
+                <i class="fa-solid fa-sort"></i>
+             </div>
+             <div class="footer-lower-text2">
+                <i class="fa-solid fa-dollar-sign"></i>
+               <div class="footer-lower-text2-a">USD-U.S.Doller</div>
+
+             </div>
+             <div class="footer-lower-text3">
+               <div class="footer-lower-logo"></div>
+               <div class="footer-lower-text3-a">United state</div>
+             </div>
+          </div>
+        
+    </div>
+
+    <div class="footer-end">
+        <div class="footer-end-container">
+            <div class="line1">
+              <div class="line1-text1">
+                <div class="line1-text1-a design1">Amazon Music</div>
+                <div class="design2">Stream millions</div>
+                <div class="design2">of songs</div>
+              </div>
+              <div class="line1-text2">
+                <div class="line1-text2-a design1">Amazon Ads</div>
+                <div class="design2">Reach customers</div>
+                <div class="design2"> wherever they</div>
+                <div class="design2">spend their time</div>
+              </div>
+              <div class="line1-text3">
+                <div class="line1-text3-a design1">6pm</div>
+                <div class="design2"> Score deals</div>
+                <div class="design2">on fashion</div>
+                <div class="design2">brands</div>
+              </div>
+              <div class="line1-text4">
+                <div class="line1-text4-a design1">AbeBooks</div>
+                <div class="design2">Books, art</div>
+                <div class="design2">& collectibles</div>
+              </div>
+              <div class="line1-text5">
+                <div class="line1-text5-a design1">ACX</div>
+                <div class="design2"> Audiobook Publishing</div>
+                <div class="design2">Made Easy</div>
+              </div>
+              <div class="line1-text6">
+                <div class="line1-text6-a design1">	Sell on Amazon</div>
+                <div class="design2">  Start a Selling </div>
+                 <div class="design2">Account</div>
+              </div>
+              <div class="line1-text7">
+                <div class="line1-text7-a design1">Amazon Business</div>
+                <div class="design2">Everything</div>
+                <div class="design2">For</div>
+                <div class="design2">Your</div>
+                <div class="design2">Business</div>
+              </div>
+            </div>
+            <div class="line2">
+                <div class="line2-text1">
+                    <div class="line2-text1-a design1">AmazonGlobal</div>
+                    <div class="design2">Ship Orders</div>
+                    <div class="design2">Internationally</div>
+                </div>
+                <div class="line2-text2">
+                    <div class="line2-text2-a design1">Home Services</div>
+                    <div class="design2">Experienced Pros</div>
+                    <div class="design2">Happiness</div>
+                    <div class="design2">Guarantee</div>
+                </div>
+                <div class="line2-text3">
+                    <div class="line2-text3-a design1">Amazon Web</div>
+                    <div class="design2">Services</div>
+                    <div class="design2">Scalable </div>
+                    <div class="design2">Cloud</div>
+                    <div class="design2">Computing </div>
+                    <div class="design2">Services</div>
+                </div>
+                <div class="line2-text4">
+                    <div class="line2-text4-a design1">Audible</div>
+                    <div class="design2">Listen to Books  </div>
+                    <div class="design2">Books & Original</div>
+                    <div class="design2">Original Audio</div>
+                    <div class="design2"> Audio</div>
+                    <div class="design2">Performances</div>
+                </div>
+                <div class="line2-text5">
+                    <div class="line2-text5-a design1">Box Office Mojo</div>
+                    <div class="design2">Find Movie</div>
+                     <div class="design2"> Box Office Data</div>
+                </div>
+                <div class="line2-text6">
+                    <div class="line2-text6-a design1">Goodreads</div>
+                    <div class="design2">Book reviews</div>
+                    <div class="design2">&</div>
+                    <div class="design2"> recommendations</div>	
+	
+                </div>
+                <div class="line2-text7">
+                    <div class="line2-text7-a design1">	IMDb</div>
+                    <div class="design2">Movies, TV</div>
+                    <div class="design2">& Celebrities</div>
+                </div>
+            </div>
+            <div class="line3">
+                <div class="line3-text1">
+                    <div class="line3-text2-a design1">IMDbPro</div>
+                    <div class="design2"> Get Info</div>
+                    <div class="design2">Entertainment</div>
+                    <div class="design2">Professionals</div>
+                    <div class="design2"> Need</div>
+                </div>
+                <div class="line3-text2">
+                    <div class="line3-text2-a design1">Kindle Direct</div>
+                    <div class="design2"> Publishing</div>
+                    <div class="design2">Indie Digital &</div>
+                    <div class="design2">Print Publishing</div>
+                    <div class="design2">Made Easy</div>
+                </div>
+                <div class="line3-text3">
+                    <div class="line3-text3-a design1">Prime Video</div>
+                    <div class="design2">Direct</div>
+                    <div class="design2">Video</div>
+                    <div class="design2"> Distribution</div>
+                    <div class="design2">Made Easy</div>
+                </div>
+                <div class="line3-text4">
+                    <div class="line3-text4-a design1">Shopbop</div>
+                    <div class="design2">Designer</div>
+                    <div class="design2">Fashion Brands</div>
+                </div>
+                <div class="line3-text5">
+                    <div class="line3-text5-a design1">Woot!</div>
+                    <div class="design2">Deals and</div>
+                    <div class="design2">Shenanigans</div>
+                </div>
+                <div class="line3-text6">
+                    <div class="line3-text6-a design1">Zappos</div>
+                    <div class="design2">Shoes &</div>
+                    <div class="design2">Clothing</div>
+                </div>
+                <div class="line3-text7">
+                    <div class="line3-text7-a design1">	Ring</div>
+                    <div class="design2">Smart Home</div>
+                    <div class="design2">Security</div>
+                    <div class="design2">Systems
+                    </div>
+                 </div>
+            </div>
+            <div class="line4">
+                <div class="line4-text1">
+                    <div class="line4-text1-a design1"></div>
+                    <pre>          </pre>
+                </div>
+                <div class="line4-text2">
+                    <div class="line4-text2-a design1">eero WiFi</div>
+                    <div class="design2">Stream 4K Video</div>
+                    <div class="design2">in Every Room</div>
+                </div>
+                <div class="line4-text3">
+                    <div class="line4-text3-a design1">Blink</div>
+                    <div class="design2">Smart Security</div>
+                    <div class="design2">for Every Home</div>
+                </div>
+                <div class="line4-text4">
+                    <div class="line4-text4-a design1">Neighbors <br>App</div>
+                    <div class="design2">Real-Time Crime</div>
+                    <div class="design2">& Safety Alerts</div>
+                </div>
+                <div class="line4-text5">
+                    <div class="line4-text5-a design1">Amazon <br>Subscription</div>
+                   <div class="design2"> Boxes</div>
+                   <div class="design2">Top subscription boxes</div>
+                   <div class="design2"> - right to your door</div>
+                </div>
+                <div class="line4-text6">
+                    <div class="line4-text6-a design1">PillPack</div>
+                    <div class="design2">Pharmacy</div>
+                     <div class="design2">Simplified</div>
+                </div>
+                <div class="line4-text7"></div>
+            </div>
+        </div>
+   
+    </div>
 </body>
 </html>
