--- a/index.html
+++ b/index.html
@@ -445,7 +445,20 @@
                 <div class="line4-text7"></div>
             </div>
         </div>
+
+
+        <div class="footer-container">
+            <div class="footer-c-text1">
+              <div class="footer-c-text1-a design2">Conditions of Use</div>
+              <div class="footer-c-text1-b design2">Privact Notice</div>
+              <div class="footer-c-text1-c design2">Your Ads Privacy Choice</div>
+           </div>
+            <div class="footer-c-text2">
+              © 1996-2024, Amazon.com, Inc. or its affiliates
+            </div>
+          </div>
    
     </div>
+   
 </body>
 </html>
